--- a/build.xml
+++ b/build.xml
@@ -50,7 +50,7 @@
   </target>
 
   <target name="jar" depends="compile">
-    <jar destfile="${build.dist}/docgenserver1701.jar" basedir="${build.classes}"/>
+    <jar destfile="${build.dist}/docgenserver.jar" basedir="${build.classes}"/>
   </target>
 
   <target name="build" depends="jar">
@@ -59,9 +59,6 @@
   	  </copy>
   	<copy todir="${build.dist}">
   		<fileset dir="${resources}"/>
-  	</copy>
-  	<copy todir="${build.dist}/xsl">
-  		<fileset dir="xsl"/>
   	</copy>
   </target>
   
