--- a/resources/config.properties
+++ b/resources/config.properties
@@ -1,7 +1,7 @@
 tempDir=/Users/dlam/Desktop/autotest
 user=docgen2
 password=docgen2
-server=sscae-srv1.jpl.nasa.gov
-port=17013
+server=sscae-cmr.jpl.nasa.gov
+port=17023
 serviceport=8000
 docweb=http://localhost:8080/upload/
